--- a/sBlog_src/src/pages/home/home.scss
+++ b/sBlog_src/src/pages/home/home.scss
@@ -1,9 +1,9 @@
 page-home {
     .content-ios .scroll-content {
-        margin-top: 20px !important;
+        margin-top: 50px !important;
         padding-top: 16px !important;
     }
     .scroll-content {
-        background-color: #e3f2fd !important;
+        background-color: #f9f9f9 !important;
     }
 }
