--- a/sBlog_src/src/components/user-feed/user-feed.html
+++ b/sBlog_src/src/components/user-feed/user-feed.html
@@ -15,7 +15,9 @@
         </ion-col>
         <ion-col col-2>
           <div class="content_post_configurations">
-            <img src="assets/svg/ic_more_vert_black_48px.svg" />
+            <button ion-button icon-only>
+              <ion-icon name="md-more"></ion-icon>
+            </button>
           </div>
         </ion-col>
       </ion-row>
@@ -33,19 +35,19 @@
     <ion-grid>
       <ion-row>
         <ion-col col-4>
-          <div>
-            <img src="assets/svg/ic_thumb_up_black_48px.svg" />            
-          </div>
+          <button ion-button icon-only>
+            <ion-icon name="md-thumbs-up"></ion-icon>
+          </button>
         </ion-col>
         <ion-col col-4>
-          <div>
-            <img src="assets/svg/ic_comment_black_48px.svg" />
-          </div>
+          <button ion-button icon-only>
+            <ion-icon name="md-text"></ion-icon>
+          </button>
         </ion-col>
         <ion-col col-4>
-          <div>
-            <img src="assets/svg/ic_share_black_48px.svg" />
-          </div>
+          <button ion-button icon-only>
+            <ion-icon name="md-share"></ion-icon>
+          </button>
         </ion-col>
       </ion-row>
     </ion-grid>
