--- a/sBlog_src/src/components/post/post.html
+++ b/sBlog_src/src/components/post/post.html
@@ -1,32 +1,55 @@
-<ion-card>
-
-  <ion-item>
-    <ion-avatar item-start class="post_user_avatar">
-      <img [src]="user?.profile_photo_url">
-    </ion-avatar>
-    <h2>{{user?.name}}</h2>
-    <p>November 5, 1955</p>
-  </ion-item>
-
-  <img *ngIf="post.image_url" [src]="post?.image_url">
-
-  <ion-card-content>
-    <p>{{post?.description}}</p>
-  </ion-card-content>
-
-  <ion-row>
-    <ion-col>
-      <button ion-button icon-left clear small>
-        <ion-icon name="thumbs-up"></ion-icon>
-        <div>{{post?.likes_count}} Likes</div>
-      </button>
-    </ion-col>
-    <ion-col>
-      <button ion-button icon-left clear small>
-        <ion-icon name="text"></ion-icon>
-        <div>{{post?.likes_count}} Comments</div>
-      </button>
-    </ion-col>
-  </ion-row>
-
-</ion-card>
+<div class="content_post">
+    <div class="content_post_header">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-3>
+            <div class="content_profile_photo mini-thumb">
+              <img [src]="user?.profile_photo_url">
+            </div>
+          </ion-col>
+          <ion-col col-7>
+            <div class="content_user_own_post">
+              <h2>{{user?.name}}</h2>
+              <p>November 5, 1955</p>
+            </div>
+          </ion-col>
+          <ion-col col-2>
+            <div class="content_post_configurations">
+              <button ion-button icon-only>
+                <ion-icon name="md-more"></ion-icon>
+              </button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+    <div class="content_post_midia">
+      <div class="content_midia" *ngIf="post?.image_url">
+        <img [src]="post?.image_url">
+      </div>
+      <div class="content_post_text">
+        <p>{{post?.description}}</p>
+      </div>
+    </div>
+    <div class="content_post_action">
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+            <button ion-button icon-only>
+              <ion-icon name="md-thumbs-up"></ion-icon>
+            </button>
+          </ion-col>
+          <ion-col col-4>
+            <button ion-button icon-only>
+              <ion-icon name="md-text"></ion-icon>
+            </button>
+          </ion-col>
+          <ion-col col-4>
+            <button ion-button icon-only>
+              <ion-icon name="md-share"></ion-icon>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
