--- a/sBlog_src/src/pages/user-chat/user-chat.scss
+++ b/sBlog_src/src/pages/user-chat/user-chat.scss
@@ -12,8 +12,7 @@ page-user-chat {
         border-top: 1px solid rgba(150, 150, 150, 0.2);
         ion-grid,
         ion-row,
-        ion-col,
-        {
+        ion-col {
             padding: 0;
         }
         ion-buttons,
@@ -32,7 +31,7 @@ page-user-chat {
             border: none !important;
             height: 50px;
             line-height: 50px;
-            font-size: 18px;            
+            font-size: 18px;
             padding-left: 15px;
         }
     }
