--- a/sBlog_src/src/app/app.scss
+++ b/sBlog_src/src/app/app.scss
@@ -13,13 +13,56 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 ///Statusbar
-.statusbar {
-    background-color: transparent !important;
+// Transparent status bar and awesome tool bar style
+// --------------------------------------------------
+// Feat android transparent status bar
+// Set padding-top and default bg-color for status bar
+.platform-android {
+    .ion-page {
+        ion-header {
+            padding-top: $cordova-md-statusbar-padding;
+            background-color: color($colors, primary);
+        }
+    }
+} // Super bar placeholder
+// Work in tool bar with transparent status bar
+%super-bar {
+    .scroll-content {
+        padding-top: 35px;
+    }
+    ion-header,
+    .toolbar-background {
+        transition: background-color 1s ease;
+        &:after {
+            height: 0 !important;
+        }
+    }
+    .opaque {
+        background-color: color($colors, primary) !important;
+        &:after {
+            height: 5px !important;
+        }
+        .toolbar-background {
+            background-color: color($colors, primary);
+        }
+    }
+} // Extend super bar placeholder for android
+.platform-android {
+    page-home,
+    page-language-details {
+        @extend %super-bar;
+    }
 }
 
 ///Header
+
+.header.header-md,
+.header.header-ios{
+    background: rgba(45, 202, 210, 1) !important;
+}
+
 .header.header-ios .toolbar.toolbar-ios {
-    padding: 16px 5px 0 !important;
+    padding: 20px 5px 0 !important;
     height: 72px !important;
 }
 
