--- a/sBlog_src/src/components/post/post.html
+++ b/sBlog_src/src/components/post/post.html
@@ -1,55 +1,55 @@
 <div class="content_post">
-    <div class="content_post_header">
-      <ion-grid>
-        <ion-row>
-          <ion-col col-3>
-            <div class="content_profile_photo mini-thumb">
-              <img [src]="user?.profile_photo_url">
-            </div>
-          </ion-col>
-          <ion-col col-7>
-            <div class="content_user_own_post">
-              <h2>{{user?.name}}</h2>
-              <p>November 5, 1955</p>
-            </div>
-          </ion-col>
-          <ion-col col-2>
-            <div class="content_post_configurations">
-              <button ion-button icon-only>
-                <ion-icon name="md-more"></ion-icon>
-              </button>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+  <div class="content_post_header">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-3>
+          <div class="content_profile_photo mini-thumb">
+            <img [src]="user?.profile_photo_url">
+          </div>
+        </ion-col>
+        <ion-col col-7>
+          <div class="content_user_own_post">
+            <h2>{{user?.name}}</h2>
+            <p>{{post.creation_data}}</p>
+          </div>
+        </ion-col>
+        <ion-col col-2>
+          <div class="content_post_configurations">
+            <button ion-button icon-only>
+              <ion-icon name="md-more"></ion-icon>
+            </button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <div class="content_post_midia">
+    <div class="content_midia" *ngIf="post?.image_url">
+      <img [src]="post?.image_url">
     </div>
-    <div class="content_post_midia">
-      <div class="content_midia" *ngIf="post?.image_url">
-        <img [src]="post?.image_url">
-      </div>
-      <div class="content_post_text">
-        <p>{{post?.description}}</p>
-      </div>
-    </div>
-    <div class="content_post_action">
-      <ion-grid>
-        <ion-row>
-          <ion-col col-4>
-            <button ion-button icon-only>
-              <ion-icon name="md-thumbs-up"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col col-4>
-            <button ion-button icon-only>
-              <ion-icon name="md-text"></ion-icon>
-            </button>
-          </ion-col>
-          <ion-col col-4>
-            <button ion-button icon-only>
-              <ion-icon name="md-share"></ion-icon>
-            </button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+    <div class="content_post_text">
+      <p>{{post?.description}}</p>
     </div>
   </div>
+  <div class="content_post_action">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4>
+          <button ion-button icon-only>
+            <ion-icon name="md-thumbs-up"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col col-4>
+          <button ion-button icon-only>
+            <ion-icon name="md-text"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col col-4>
+          <button ion-button icon-only>
+            <ion-icon name="md-share"></ion-icon>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+</div>
